# pba-assignment-cd

./: .gitignore  README.md  main.py  pyproject.toml  run_all_tests.py
assignment/: B_tet_vertex.py  __init__.py  d2neohookean_energy_dF2_tet.py  deformation_gradient_tet.py  dneohookean_energy_dF_tet.py  dphi_tetdq.py  elastic_gradient_and_hessian.py  ground_contact_gradient_and_hessian.py  inertial_gradient_and_hessian.py  mass_matrix_tet.py  solve_coordinates.py
data/: __init__.py  rubber_chicken.mesh  sphere.mesh
given/: __init__.py  adjacency.py  compute_predicted_positions.py  coordinate_descent.py  integrate.py  lumped_mass.py
test_output/: bunny_fall.usd  bunny_stationary.usd  bunny_swing.usd  one_tet_fall.usd  one_tet_stationary.usd  one_tet_swing.usd  two_tets_fall.usd  two_tets_stationary.usd  two_tets_swing.usd
tests/: bunny_fall.py  bunny_stationary.py  bunny_swing.py  dragon_fall.py  dragon_swing.py  one_tet_fall.py  one_tet_stationary.py  one_tet_swing.py  rubber_chicken_fall.py  rubber_chicken_swing.py  sphere_fall.py  two_tets_fall.py  two_tets_stationary.py  two_tets_swing.py
utils/: __init__.py  config.py  emu2lame.py  load_config.py  model.py  usdmeshwriter.py
